CHANGE: Core  | Reduced thread count by aggregating async listener dispatchers [Parg]
CHANGE: Core  | Major refactoring of Download and Disk managers [Parg]
CHANGE: Core  | Download totals don't include hash fails and discards and aren't included in share-ratio calculation [Parg]

BUGFIX: Core  | Fix interested flag being set sometimes when seeding [Nolar]
BUGFIX: Core  | Wrong file name returned for stopped simple torrents [Parg]
BUGFIX: Core  | Seeder/leecher counts missing for published torrents [Parg]
BUGFIX: Core  | Stats going negative for hosted torrent average up/down [Parg]
BUGFIX: Core  | Fix piece request ignore bug [Nolar]
BUGFIX: UI    | Create-torrent wizard fix for multi-torrent checkbox enabling error [Parg]
BUGFIX: Core  | fixed DHT initialisation hang if port already in use [Parg]
BUGFIX: Core  | Don't allow prohibited peer sources to be enabled (ui artifact only) [Parg]
BUGFIX: Plug  | UPnP fix for picking up changed network interfaces [Parg]
BUGFIX: UI    | Fixed 100% CPU problem with download bars [Parg]
BUGFIX: UI    | Fixed UI foregrounding itself on every unverified localhost:6880 socket connection attempt [Nolar]




2005.06.27 | Azureus 2.3.0.4

FEATURE: Core | DHT torrent lookup now based on sha1(hash) and torrent xfer encrypted using hash-derived key [Parg]
FEATURE: Core | More aggressive banning of peers sending bad data - algorithm change and block-banning feature [Gudy,Parg]
FEATURE: Core | Support for multiple DHT networks on same port [Parg]
FEATURE: Core | Introduced "passive torrents" - these are tracked but not downloaded [Parg]
FEATURE: Core | Category setting functions added to "My Tracker" [Parg]
FEATURE: Core | Added ability to make plugin config ui components invisible [Parg]
FEATURE: UI   | Average peer speed for swarm column added [Nolar]
FEATURE: Plug | Plugin interface extension to allow per-plugin torrent-attributes [Parg]
FEATURE: Plug | Plugin ResourceDownload feature for accessing content-type [Parg]
