@@ -1288,8 +1288,8 @@ ConfigView.section.security.toolsdir=Directory containing 'tools.jar'
 ConfigView.section.security.choosetoolssavedir=Select folder containing 'tools.jar'
 authenticator.torrent=Torrent
 ConfigView.section.proxy.peer.same=Use same proxy settings for tracker and peer communications proxy 
-ConfigView.section.connection.network.max.simultaneous.connect.attempts=Max simultaneous outbound connection attempts [0: outbound disabled]
-ConfigView.section.connection.network.max.simultaneous.connect.attempts.tooltip=Max number of new outbound connection establishments Azureus should attempt any given time.\nNOTE: WindowsXP Service Pack 2 (SP2) imposes a system-wide limit of 10 simultaneous connect attempts.\nDefault value is 8. Value of 0 disables outbound connects entirely.
+ConfigView.section.connection.network.max.simultaneous.connect.attempts=Max simultaneous outbound connection attempts
+ConfigView.section.connection.network.max.simultaneous.connect.attempts.tooltip=Max number of new outbound connection establishments Azureus should attempt any given time.\nNOTE: WindowsXP Service Pack 2 (SP2) imposes a system-wide limit of 10 simultaneous connect attempts.\nDefault value is 8.
 ConfigView.section.file.perf.cache.size.explain=The cache is used to reduce reads from/writes to disk. Unless you are using the java option '-XX:MaxDirectMemorySize' to explicitly set the memory available for cache and network IO use, you should keep this value at least %1 below your maximum VM size. The current maximum VM size is %2. For instructions on how to change this, see MemoryUsage in the wiki on %3. Failure to use sensible settings will result on 'out of memory' errors. More than 32MB of cache is probably overkill.
 MyTorrentsView.menu.setSpeed.unlimit=No limit
 MyTorrentsView.menu.setSpeed.unlimited=Unlimited
